<resources>
    <string name="app_name">TMDbExplorer</string>

    <string name="search_message">Digite o título de um filme</string>

    <string name="date_error_message">[No Date]</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>

    <!-- Text to display in the list when there are no movies [CHAR LIMIT=NONE] -->
    <string name="no_movies">No movies found.</string>

    <string name="overview_label">Overview</string>

    <string name="vote_average_label">Vote Average</string>

    <string name="vote_count_label">Vote Count</string>

    <string name="revenue_label">Revenue</string>

    <string name="runtime_label">Runtime</string>
</resources>
